# oxescrow-program

./: .gitignore  Cargo.toml  ReadMe.md  package.json  solana.escrow.config.json.example
client/: .eslintrc  .gitignore  package.json  solana.escrow.config.json.example  terms.json  tsconfig.json
client/bash/: deploy.sh
client/keys/: alice_usdc_pub.json  bob_usdc_pub.json  escrow_pub.json  mint_usdc_pub.json  program_pub.json
client/src/: airdrop.ts  alice.ts  bob.ts  deployer.js  deployer.ts  fresh-deploy.ts  mintUsdc.ts  network.js  network.ts  oracle.js  oracle.ts  setup.ts  store.ts  utils.ts
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  route.rs  state.rs
program/src/instructions/: mod.rs
program/src/instructions/default_escrow/: init_escrow.rs  mod.rs  oracle_call.rs  release_escrow.rs
program/src/instructions/wallet_escrow/: collect_deposit.rs  mod.rs  register_escrow.rs
program/src/states/: default_escrow.rs  escrow_instruction.rs  escrow_registry.rs  mod.rs  wallet_escrow.rs
program/src/utils/: constants.rs  mod.rs  token_lib.rs
src/: entrypoint.rs  error.rs  lib.rs  processor.rs  state.rs
