[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.18.2"
ahash = "0.8.5"
thiserror = "1.0.24"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
arrayref = "0.3.6"
spl-associated-token-account = { version="3.0.2", features = [ "no-entrypoint" ] }
sha2 = "0.10.8"
hex = "0.4.3"

[lib]
crate-type = ["cdylib", "lib"]
